src/components/Card/Card.css
.card {
  --avatar-offset: 54px;
  --avatar-dim: 108px;
  display: flex;
  flex-direction: column;
  width: 280px;
  padding: 0 20px;
  border-radius: 5px;
  text-align: center;
  position: relative;
  border: 1px solid #ccc;
  margin-top: calc(var(--avatar-offset) + 20px);
  margin-right: 5px;
  margin-left: 5px;
  box-shadow: -1px 2px 5px 0 rgba(95, 95, 95, 0.2);
}

.card .country {
  color: #4a4a4a;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.card .avatar {
  width: var(--avatar-dim);
  height: 118px;
  margin: calc(var(--avatar-offset) * -1) auto 0;
}

.card .avatar i {
  position: absolute;
  font-size: var(--avatar-dim);
  width: var(--avatar-dim);
  height: var(--avatar-dim);
  background: #fff;
  color: rgb(155, 155, 155);
  border-radius: 50%;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
    0 1px 10px 0 rgba(0, 0, 0, 0.12);
  display: block;
}

.card .avatar img {
  display: block;
  position: relative;
  border-radius: 50%;
  object-fit: cover;
  width: var(--avatar-dim);
  height: var(--avatar-dim);
}

.card .name {
  color: #4a4a4a;
  font-size: 20px;
  margin: 0 0 5px;
}

.card .title {
  color: #999;
  margin: 0 0 5px;
  font-weight: 400;
}

.card .description {
  font-style: italic;

  color: #16385c;
  font-weight: 600;
  margin-bottom: 5px;
  padding: 5px 2.5px;
  border-radius: 10px;
}

.card .tags {
  z-index: 2;
  margin-bottom: 10px;
  margin: 10px -10px;
}

.card .tag {
  color: #fff;
  background: #16385c;
  border: 0;
  border-radius: 20px;
  display: inline-block;
  padding: 5px 10px;
  margin: 0 2.5px 5px;
  line-height: 1;
  user-select: none;
  text-transform: lowercase;
}

.card .tag:hover {
  cursor: pointer;
}

.card .channels {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: flex-end;
}

.card .channels .channel-inner {
  display: flex;
  justify-content: space-between;

  background-color: #d0f8ef;
  align-items: center;
  padding: 10px;
  margin-right: -20px;
  margin-left: -20px;
}
.card .wave {
  position: absolute;
  bottom: 60px;
  left: 0;
  background-color: white;
  height: 30px;
  width: 100%;
  border-bottom-left-radius: 100%;
  border-bottom-right-radius: 100%;
}

.card .channels a {
  color: #16385c;
  text-decoration: none;
}

.card .channels a .icon {
  transition: transform 0.3s ease;
  transform-origin: 50%;
}

.card .channels a:hover .icon {
  transform: rotate(45deg);
}

.card .channels a .type::first-letter {
  text-transform: uppercase;
}

.card .channels a {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.card .channels .type {
  margin: 5px 0px;
}

.channel-label {
  text-decoration: none;
}

.card .like-button {
  background: none;
  border: none;
  cursor: pointer;
}

.card .liked,
.card .like-button:hover i {
  color: #db2828;
}

@media all and (max-width: 575.98px) {
  .card {
    margin-left: auto;
    margin-right: auto;
  }
}

